--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
@@ -1,108 +1,108 @@
-title=Confirmation Approve
-appTitle=Confirmation Approve
+title=Conferma approvazione
+appTitle=Conferma approvazione
 appDescription=
  
 #XTXT: 
-EBELN=Purch.Doc.
+EBELN=Doc. d\u00B4acquisto
  
 #XTXT: 
-EBELP=Item
+EBELP=Posizione
 
 #XTXT: 
-WEMNG=Qty Delivered
+WEMNG=Quantit\u00E0 entrata merci
  
 #XTXT: 
-MNG02=Committed Qty
+MNG02=Quantit\u00E0 confermata
 
 #XTXT: 
-ETENR=Schedule Line
+ETENR=Schedulazione
  
 #XTXT: 
-EINDT=Delivery Date
+EINDT=Data consegna
  
 #XTXT: 
-LPEIN=Category Delivery Date
+LPEIN=Categoria data di consegna
 
 #XTXT: 
-EBTYP=Conf.Cat.
+EBTYP=Cat.Conf.
 
 #XTXT: 
-MATNR=Material
+MATNR=Materiale
  
 #XTIT: 
-titleModOds=Order Change Request
+titleModOds=Richiesta di modifica dell\u00B4ordine
  
 #XTXT: 
-TXZ01=Material Description
+TXZ01=Descrizione Materiale
  
 #XTXT: 
-IDNLF=Supp. Mat.
+IDNLF=Cd. mat. fornitore
  
 #XTXT: 
-MENGE=Quantity
+MENGE=Quantit\u00E0
 
 #XTXT: 
-MENGE_NEW=New Quantity
+MENGE_NEW=Nuova Quantit\u00E0
  
 #XTXT: 
-NETPR=Net Price
+NETPR=Prezzo netto
  
 #XTXT: 
-PEINH=Price unit
+PEINH=Unit\u00E0 di prezzo
  
 #XBUT: 
-Confirm=Confirm
+Confirm=Conferma
  
 #XBUT: 
-Reject=Reject
+Reject=Rifiuto
  
 #XFLD: 
-filter=Filter:
+filter=Filtri:
  
 #XTIT: 
-changeRequest=Change request
+changeRequest=Richiesta di modifica
  
 #XTXT: 
-clearFilter=Clear filter
+clearFilter=REsetta Filtri
  
 #XTXT: 
-noData=No data found
+noData=Non sono stati trovati Ordini
  
 #XMSG: 
-ERR_NoOrderSelect=Please select at least one position.
+ERR_NoOrderSelect=Selezionare almeno una posizione.
  
 #XTXT: 
-schedulations=Schedulations
+schedulations=Schedulazioni
  
 #XTXT: 
-supplier=Supplier
+supplier=Fornitore
  
 #XTXT: 
-EKORG=Purchase Organization
+EKORG=Organizzazione Acquisti
  
 #XTXT: 
-NETPR_NEW=New Net Price 
+NETPR_NEW=Nuovo Prezzo netto
  
 #XTXT: 
-PEINH_NEW=New Price unit
+PEINH_NEW=Nuova Unit\u00E0 di prezzo
  
 #XTXT: 
-SchedMod=Schedule Mod.
+SchedMod=Modifica Sched.
 
 #XTXT: 
 METASUP=Metasupplier
 
 #XTXT: 
-purchaseOrganization=Purchase Organization
+purchaseOrganization=Organizzazione Acquisti
 
 #XTXT: 
-EKGRP=Purchases Group
+EKGRP=Gruppo Acquisti
  
 #XTXT: 
-WERKS=Plant
+WERKS=Divisione
 
 #XTXT: 
-ZTERM=Payt terms
+ZTERM=Condizioni di Pagamento
 
 #XTXT: 
 INCO1=Incoterms (part 1)
@@ -111,23 +111,22 @@ INCO1=Incoterms (part 1)
 SYSID=System ID
 
 #XFLD: 
-ERR_Export=No orders found to export
+ERR_Export=Nessun dato da esportare
 
 #XMSG: 
-MessConf=Are you sure you want to confirm price for selected positions?
-MessReject=Are you sure you want to reject selected positions?
-correctConfirmPositions = Positions correctly confirmed
-correctConfirmData = Data correctly elaborated
-ERR_Confirmation_In_Corso_Approvazione = Confirmation order approvment in course for selecte position.
+MessConf=Sei sicuro di voler confermare il prezzo per le posizioni selezionate?
+MessReject=Sei sicuro di voler rifiutare le posizioni selezionate?
+correctConfirmPositions =Posizioni confermate correttamente
+correctConfirmData =Dati elaborati correttamente
+ERR_Confirmation_In_Corso_Approvazione = Esiste una approvazione in corso per la posizione selezionata.
 
-schedules = schedules
+schedules = Schedulazioni
 
-confirmations = Confirmations
+confirmations = Conferme
+status = Stato
 
-status = Status
- 
 #XFLD: 
-approveReject=Approve/Reject
+approveReject=Approva/Rifiuta
 
 #XFLD: 
 qtaRichiesta=Quantit\u00E0 richiesta
@@ -142,51 +141,53 @@ progRichiesto=Progressivo richiesto
 progConfermato=Progressivo confermato
  
 #XFLD: 
-deltaProgr=Delta progressivo
+deltaProgr=Delta prog. qta.
  
 #XFLD: 
-deltaQuant=Delta quantit\u00E0
+deltaQuant=Delta punt. qta.
  
 #XFLD: 
 percDiffProgr=% differenza progressivo
  
 #XFLD: 
-approva=Approve
+approva=Approva
  
 #XFLD: 
-rifiuta=Reject
+rifiuta=Rifiuta
 
-positionConfirmation = Approve / Reject
+positionConfirmation = Approvazione / Rifiuto
 
-close = Cancel
+close = Annulla
 
-date = Date
+date = Data
+
+#XFLD: 
+statusColorTitle=Legenda colori stato
+
+legend = Legenda stati
+
+#XFLD: 
+Esegui=Esegui
+
+
+#XFLD: 
+LIFNR=Codice fornitore
  
 #XFLD: 
-statusColorTitle=Color status legend
+NAME1=Fornitore
 
-legend = Status legend
- 
-#XFLD: 
-Esegui=Execute
- 
-#XFLD: 
-LIFNR=Supplier
- 
-#XFLD: 
-NAME1=Supplier Name
+MSG_Confirm_Reject_Text = Sei sicuro di voler confermare/rifiutare le posizioni selezionate?
 
-MSG_Confirm_Reject_Text = Do you want to confirm this operation?
+AddNota=Aggiungi nota per il rifiuto (non obbligatoria)
 
-AddNota=Add note (optional)
-dataConferma=Date confirm
-quantitaConferma=Qty confirm
-dataRichiesta=Date Requested
-quantitaRichiesta=Qty Requested
-deltaGG=Delta Day
-deltaQuantita=Delta Qty
-MSG_NO_TO_CONFIRM=No data found
-advice = Advice
-advice_msg = Need Prob Mod Sched
-ZINVALIDITA=Start dt
-ZFINVALIDATA=End dt
+dataConferma=Data conferma
+quantitaConferma=Quant conferma
+dataRichiesta=Data richiesta
+quantitaRichiesta=Quant richiesta
+deltaGG=Delta GG
+deltaQuantita=Delta Quant.
+MSG_NO_TO_CONFIRM=Nessuna dato trovato
+advice = Avvertenza
+advice_msg = Necessario Prob Mod Sched
+ZINVALIDITA=Init valid
+ZFINVALIDATA=Fin valid
