--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n.properties
@@ -81,9 +81,9 @@ EVENTO=Evento
 DIREZIONE=Direzione
 
 TIME_DEPENDENT=Time Dependernt
-GG_ESTRAZIONE=Days Extraction
-PROGRESSIVI=Progressive
-ZAPPPERSUP=Higher percentage
-ZAPPPERINF=Lower Percentage
-ZAPPGGSUP=Higher Num. Days
-ZAPPGGINF=Lower Num. Days
+GG_ESTRAZIONE=Giorni Estrazione
+PROGRESSIVI=Progressivi
+ZAPPPERSUP=Percentuale Superiore
+ZAPPPERINF=Percfentuale Inferiore
+ZAPPGGSUP=Num. giorni Superiore
+ZAPPGGINF=Num. giorni Inferiore
