--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n.properties
@@ -242,7 +242,6 @@ LPEIN=Category Delivery Date
  
 #XTXT: 
 MENGE=Quantit\u00E0
-
 MENGE_SCH=Quantit\u00E0 aperta
 
 #XTXT: 
@@ -292,7 +291,7 @@ ERR_Selection_Row=Prego selezionare almeno una posizione.
 ERR_Confirm_Position_Text = Nota e Data di consegna sono campi obbligatori
 ERR_Deliveries_Mandatory = Inserire tutti i campi della consegna in posizione {0}
 ERR_Confirmation_Type_Mandatory = Tipo consegna obbligatorio per la posizione {0}
-ERR_Sum_Schedulations = La somma delle quantità delle schedulazioni {0} eccede il totale di posizione.
+ERR_Sum_Schedulations = La somma delle quantit\u00E0 delle schedulazioni {0} eccede il totale di posizione.
 ERR_Price_Perc_Up = Il prezzo della posizione {0} eccede la percentuale superiore di deviazione.
 ERR_Price_Perc_Down =  Il prezzo della posizione {0} eccede la percentuale inferiore di deviazione
 ERR_Empty_Deliveries = Aggiungi spedizioni alla posizione {0}
@@ -374,7 +373,7 @@ ERR_quant_colli = Attenzione inserire i colli o la quantit\u00E0
 NrColli=Nr. colli
  
 #XFLD: 
-QuantitaCollo=Quantità per collo
+QuantitaCollo=Quantit\u00E0 per collo
  
 #XFLD: 
 ADD=Aggiungi
@@ -401,13 +400,6 @@ ERR_Export=Nessun dato da esportare
 
 #XFLD: 
 Export_Excel=Esporta i dati in formato excel
- 
-#XFLD: 
-printHU=Stampa HU selezionate
-
-VENUM=Numero HU interno
-EXIDV=Numero HU esterno
-
 
 #XTXT: 
 peso=Peso
@@ -417,3 +409,4 @@ volume=Volume
 
 #XTXT: 
 testo=Testo
+
