--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n.properties
@@ -4,13 +4,13 @@ appDescription=
 close=Chiudi
 completed=Completa
 inProgress=In Progress
-Detail = Detail advices
-DettTestata = Information header
-DettaglioTestata = Header Details
-Dettpos = Information details
 #XFLD: 
 BU=Business Unit
 titleMatnr=Ricerca materiale
+Detail = Dettaglio Avviso: 
+DettaglioTestata = Cause, Misure ed Interventi di Testata
+DettTestata = Informazioni di testata
+Dettpos = Informazioni di dettaglio
 #XFLD: 
 tipoAvviso=Tipo avviso
 
@@ -32,29 +32,34 @@ XBLNR = DDT
 TXT = Testo
 LONGTXT = Cronologia
 INPUTXT = Inserimento Testo
+
 #XFLD: 
 REVLV=Stato
  
 #XFLD: 
-QMNUM=Avviso
+QMNUM=Nr. avviso
  
 #XFLD: 
-QMTXT=Desc. avv.
+QMTXT=Descrizione
  
 #XFLD: 
 MATXT=Descrizione materiale
  
 #XFLD: 
-SERIALNR=Seriale
+SERIALNR=Numero seriale
  
 #XFLD: 
-EBELN=Numero ordine
+EBELN=Ordine acquisto
  
 #XFLD: 
-EBELP=Positione
+EBELP=Pos. OdA
  
 #XFLD: 
 RKMNG=Quantit\u00E0
+
+#XTXT: 
+LIFNR=Fornitore
+ZNOME=Responsabile
 
 #XFLD: 
 Export_Excel=Esporta i dati in formato excel
@@ -62,23 +67,18 @@ Export_Excel=Esporta i dati in formato excel
 #XFLD: 
 ERR_Export=Nessun dato da esportare
 
-#XTXT: 
-LIFNR=Supplier
-ZNOME=Responsible
-
 ERR_Type_missmatch = Errore nel caricamento del file solo formati di tipo xlxs,docx,pdf,txt sono permessi
 ERR_file_size = Attenzione il file caricato eccede i 5 Mb di dimensione
 OK_Upload=File caricato correttamente
 ERR_file_not_found=File non trovato
-
 #XTXT: 
-Header=Header Information
+Header=Informazioni di Testata
  
 #XTXT: 
-Item=Item Information
+Item=Informazioni di Posizione
 
 #XTXT: 
-Difetti=Difetti
+Difetti=Lista Difetti
 
 #XTXT: 
 Misure=Azioni correttive
@@ -90,13 +90,12 @@ Interventi=Interventi
 Cause=Cause
 
 NAME1_WRK = Divisione
-
 ERNAM_TEXT=Creatore
- 
+
 #XTXT: 
 Tipologia=Tipologia
  
 #XTXT: 
 Title2=Cause Misure Interventi
-MSG_Confirm_Text=Are you sure you want to confirm?
+MSG_Confirm_Text=Sei sicuro di vole confermare le modifiche?
 OK_MSG=Elaborato Correttamente
