--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
@@ -1,112 +1,112 @@
-title=Scheduling Agreement
-appTitle=Scheduling Agreement
+title=Piani di Consegna
+appTitle=Piani di Consegna
 appDescription=
 
-supplierOrdersHeader = Supplier Orders Headers
-address = Address 
-officePhone = Office Phone
+supplierOrdersHeader = Testata Piani di Consegna Fornitore
+address = Indirizzo 
+officePhone = Telefono Ufficio
 email = Email
-orders = Orders
-orderNumber = Order number
-PtConditionCode = Paym. cond.
-paymentConditionDescr = Paym. cond. descr.
-supplier = Supplier
-supplierDescr = Supplier Descr.
-gruppoAcquisti = Purchase Group
+orders = Ordini
+orderNumber = Numero ordine
+PtConditionCode = Cond.Pagamento
+paymentConditionDescr = Descr.cond.Pagamento
+supplier = Fornitore
+supplierDescr = Descr.Fornitore
+gruppoAcquisti = Gruppo Acq.
 
-orderPositionViewTitle = Order Positions
-orderPosition = Position
-positions = Positions
-materialCode = Material Code
-materialDescr = Material Descr
-quant = Quant
-searchOrders = Search Orders
+orderPositionViewTitle = Posizione Ordini
+orderPosition = Posizione
+positions = Posizioni
+materialCode = Codice Materiale
+materialDescr = Descr.Materiale
+quant = Quantit\u00E0
+searchOrders = Ricerca Ordini
 
-correctConfirmPositions = Positions correctly elaborated
-positionNotConfirmable = Positions {0} are not confirmable
-allPositionNotConfirmable = All selected order positions can not be confirmed
+correctConfirmPositions = Posizioni elaborate correttamente
+positionNotConfirmable = Posizioni {0} non sono confermate
+allPositionNotConfirmable = Tutte le posizioni degli ordini selezionate non possono essere confermate
  
 #MESSAGES:
-noOrderFound = No orders found
+noOrderFound = Non sono stati trovati Ordini
  
 #XBCB: 
-postalCode=Postal code
+postalCode=Codice postale
  
 #XTXT: 
-supplierCode=Supplier Code
+supplierCode=Codice Fornitore
  
 #XTXT: 
-supplierName=Supplier Name
+supplierName=Nome Fornitore
  
 #XTXT: 
-city=City
+city=Citt\u00E0
  
 #XTXT: 
-purchaseOrganization=Purchase Organization
+purchaseOrganization=Organizzazione acquisti
  
 #XBUT: 
-search=Search
+search=Cerca
  
 #XFLD: 
-company=Company
+company=Societ\u00E0
  
 #XTXT: 
-schedules=Schedules
+schedules=Schedulazioni
  
 #XTXT: 
-confirmations=Confirmations
+confirmations=Conferme
  
 #XFLD: 
-homePhone=Home Phone
+homePhone=Telefono di casa
  
 #XTXT: 
-ZTERM=Payt terms
+ZTERM=Condizioni di Pagamento
  
 #XTXT: 
-VTEXT=Def. payt terms
+VTEXT=Def. cond. pagamento
  
 #XTXT: 
-LIFNR=Supplier
+LIFNR=Fornitore
  
 #XTXT: 
-WAERS=Currency
+WAERS=Divisa
  
 #XTXT: 
-EKGRP=Purchases Group
+EKGRP=Gruppo acquisti
 
  
 #XTXT: 
-EKNAM=Description Purch. Grp
+EKNAM=Def. gruppo acq.
  
 #XTXT: 
-EKTEL=Purchase Group tel
+EKTEL=Telefono gr. acq.
  
 #XTXT: 
-SMTP_ADDR=Email Address
+SMTP_ADDR=Indirizzo Email
  
 #XTXT: 
-GWLDT=Guarantee Date
+GWLDT=Data garanzia
  
 #XTXT: 
-AUSNR=Contract Request Number
+AUSNR=N. estratto conto
  
 #XTXT: 
-ANGNR=Offer Number
+ANGNR=N.Offerta
  
 #XTXT: 
-ZBD1T=Days Discount 1
+ZBD1T=Giorni di sconto 1
  
 #XTXT: 
-ZBD2T=Days Discount 2
+ZBD2T=Giorni di sconto 2
  
 #XTXT: 
-ZBD3T=Days Discount 3
+ZBD3T=Giorni di sconto 3
  
 #XTXT: 
-ZBD1P=Disc Percent 1
+ZBD1P=Percentuale di sconto 1
  
 #XTXT: 
-ZBD2P=Discount Percentage 2
+ZBD2P=Percentuale di sconto 2
  
 #XTXT: 
 INCO1=Incoterms (part 1)
@@ -115,313 +115,305 @@ INCO1=Incoterms (part 1)
 INCO2=Incoterms (part 2)
  
 #XTXT: 
-MEINS=Base Unit
+MEINS=Unit\u00E0 di misura
  
 #XTXT: 
-NETPR=Net Price
+NETPR=Prezzo netto
  
 #XTXT: 
-PEINH=Price Unit
+PEINH=Unit\u00E0 di prezzo
  
 #XTXT: 
-BPRME=Unit Of Measure Of Price
+BPRME=UM prz.ord.acq.
  
 #XTXT: 
-BPUMZ=Counter Conversion from UM prz ODA to UMO
+BPUMZ=Conversione da UM prz. ORDACQ in UMO
  
 #XTXT: 
-BPUMN=Denomination Conversion from UM prz ODA to UMO
+BPUMN=Conversione da UM prz. ORDACQ in UM ORDACQ
  
 #XTXT: 
-UMREZ=Counter Conversion from UM ODA to basic UM
+UMREZ=Contatore per la conversione in unit\u00E0 di mis. di base
  
 #XTXT: 
-UMREN=Name Conversion from UM ODA to basic UM
+UMREN=Denom. per la conversione in unit\u00E0 di misura di base
  
 #XTXT: 
-SCHPR=Estimated Price Code
+SCHPR=Prezzo stimato
  
 #XTXT: 
-KANBA=Production Supply Type
+KANBA=Tipo di approvvigionamento
  
 #XTXT: 
-BSTAE=Confirmation Key
+BSTAE=Contr. conferma
  
 #XTXT: 
-MAHNZ=No. Rem./Exp.
+MAHNZ=N. solleciti
  
 #XTXT: 
-MAHN1=1st Rem./Exped.
+MAHN1=1. sollecito
  
 #XTXT: 
-MAHN2=2nd Rem./Exped.
+MAHN2=2. sollecito
  
 #XTXT: 
-MAHN3=3rd Rem./Exped.
+MAHN3=3. sollecito
  
 #XTXT: 
-UEBTO=Overdeliv. Tol.
+UEBTO=Tolleranza cons. in eccesso
  
 #XTXT: 
-UEBTK=Unlimited
+UEBTK=Consegna in eccesso illimitata
  
 #XTXT: 
-UNTTO=Underdel. Tol.
+UNTTO=Tolleranza consegna in difetto
  
 #XTXT: 
-PSTYP=Item category
+PSTYP=Tipo posizione
  
 #XTXT: 
-KNTTP=Acct Assgmt Cat
+KNTTP=Categoria di contabilizzazione
  
 #XTXT: 
-RETPO=Returns Item
+RETPO=Pos. resi
  
 #XTXT: 
-KZABS=Acknowl. Reqd
+KZABS=Obbligo conf.ordine
  
 #XTXT: 
-LABNR=Order Acknowl.
+LABNR=Conferma ordine
  
 #XTXT: 
-KONNR=Upper Contract Number
+KONNR=Num. contratto superiore
  
 #XTXT: 
-KTPNR=Position Number Upper Contract
+KTPNR=Num. pos. contratto superiore
  
 #XTXT: 
-ABDAT=Date Agreed Progressive Num Contract
+ABDAT=Data concord num. progressivo concord
  
 #XTXT: 
-ABFTZ=Quantity Accumulated Agreed
+ABFTZ=Quantit\u00E0 accumulata concordata
  
 #XTXT: 
-ETFZ1=First Fixed Period
+ETFZ1=Primo periodo fisso
  
 #XTXT: 
-ETFZ2=Second Fixed Period
+ETFZ2=Secondo periodo fisso
  
 #XTXT: 
-BSTYP=Purchase Document Category
+BSTYP=Categoria documento acquisti
  
 #XTXT: 
-ZGTYP=Certified Category
+ZGTYP=Categoria certificata
  
 #XTXT: 
-EAN11=European Article Code
+EAN11=Codice europeo articoli (EAN)
  
 #XTXT: 
-MFRPN=Component Code by Manufacturer
+MFRPN=Cod. componente del costruttore
  
 #XTXT: 
-MFRNR=Number Builder
+MFRNR=Num Produttore
  
 #XTXT: 
-EMNFR=External Name By Manufacturer
+EMNFR=Nome usato dal costruttore
  
 #XTXT: 
-MATNR=Material
+MATNR=Materiale
  
 #XTXT: 
-TXZ01=Short Description
+TXZ01=Descrizione Breve
  
 #XTXT: 
-WERKS=Plant
+WERKS=Divisione
  
 #XTXT: 
-IDNLF=Supp.Mat.No.
+IDNLF=Codice mat. fornitore
  
 #XTXT: 
-ETENR=Schedule Line
+ETENR=Schedulazione
  
 #XTXT: 
-EINDT=Delivery Date
+EINDT=Data consegna
  
 #XTXT: 
-LPEIN=Category Delivery Date
+LPEIN=Categoria data di consegna
  
 #XTXT: 
-MENGE=Quantity
+MENGE=Quantit\u00E0
  
 #XTXT: 
-WEMNG=Qty Delivered
+WEMNG=Quantit\u00E0 entrata merci
  
 #XTXT: 
-MNG02=Committed Qty
+MNG02=Quantit\u00E0 confermata
  
 #XTXT: 
-loading=Loading
+loading=Caricamento in corso
  
 #XTXT: 
-EBELN=Document
+EBELN=Doc. acquisto
  
 #XTXT: 
-ETENS=Number Vendor Confirmation
+ETENS=Num. conferma Fornitore
  
 #XTXT: 
-EBTYP=Confirmation category
+EBTYP=Categoria di Conferma
  
 #XTXT: 
-UZEIT=Time
+UZEIT=Ora
  
 #XTXT: 
-DABMG=Qty Reduced 
+DABMG=Qt\u00E0 ridotta
  
 #XTXT: 
-ESTKZ=Creation ind.
+ESTKZ=Codice creazione
  
 #XTXT: 
-KZDIS=MRP-Relevant information
+KZDIS=Rilev. per MRP
  
 #XTXT: 
-XBLNR=Reference
+XBLNR=Riferimento
  
 #XTXT: 
-MPROF=Mfr Part Profile information
+MPROF=Prof. compon. ass. costr.
  
 #XTXT: 
-EMATN=Material information
-
+EMATN=Informazione Materiale
+ 
 #XBUT: 
-Confirm=Confirm
+Confirm=Conferma
  
 #XMSG: 
-ERR_Selection_Row=Please select one or more position.
-ERR_Confirm_Position_Text = Reference document number is mandatory
-ERR_Schedulations_Mandatory = Please compile all schedulations fields
-ERR_Schedulations_Menge_0 = Quantity 0 not permitted
-ERR_Confirmation_Type_Mandatory = Confirmation type is mandatory for position {0}
-ERR_Confirmation_Type_Mandatory_Single = Confirmation type is mandatory
-ERR_Sum_Schedulations = Schedulation quantity sum for position {0} exceeds the total amount of position
-ERR_Sum_Schedulations_Single = Schedulation quantity sum for position exceeds the total amount of position
-ERR_Price_Perc_Up = Position {0} price exceeds the percentage of upper deviation
-ERR_Quant_Perc_Up_Single = La somma delle quantit\u00E0 inserite supera la percentuale di scostamento superiore
-ERR_Quant_Perc_Down_Single =  La somma delle quantit\u00E0 inserite supera la percentuale di scostamento inferiore
-ERR_Price_Perc_Down = Position {0} price exceeds the percentage of lower deviation
-ERR_Price_DateB = Order {0} Value the Validity Start date
-ERR_Price_DateE = Order {0} Value the Validity End date
-ERR_Price_valB = Order {0} Unable to select a date befor than today
-ERR_Confirmation_In_Corso_Approvazione=Exist order for this position
-OK_Position_confirm=No error found for position
+ERR_Selection_Row=Seleziona una o più posizioni.
+ERR_Confirm_Position_Text =Il numero del documento di riferimento è obbligatorio
+ERR_Schedulations_Mandatory = Compilare tutti i campi a video
+ERR_Schedulations_Menge_0 = Quantit\u00E0 conferma a zero non permessa
+ERR_Confirmation_Type_Mandatory = Il tipo conferma è obbligatorio per posizione {0}
+ERR_Confirmation_Type_Mandatory_Single = Il tipo conferma è obbligatorio
+ERR_Sum_Schedulations = La somma della quantit\u00E0 di Schedulazioni per la posizione {0} supera la quantit\u00E0 totale di posizione
+ERR_Sum_Schedulations_Single = La somma della quantit\u00E0 di Schedulazioni per la posizione supera la quantit\u00E0 totale di posizione
+ERR_Price_Perc_Up = Ordine {0} il prezzo supera la percentuale di scostamento superiore
+ERR_Quant_Perc_Up_Single = Ordine {0} la somma delle quantit\u00E0 inserite supera la percentuale di scostamento superiore
+ERR_Price_Perc_Down = Ordine {0} il prezzo supera la percentuale di scostamento inferiore
+ERR_Quant_Perc_Down_Single =  Ordine {0} la somma delle quantit\u00E0 inserite supera la percentuale di scostamento inferiore
+ERR_Confirmation_In_Corso_Approvazione=Esiste gi\u00E0 una conferma per la posizione selezionata.
+ERR_Price_DateB = Ordine {0} Valorizzare la data di Inizio Validit\u00E0
+ERR_Price_DateE = Ordine {0} Valorizzare la data di Fine Validit\u00E0
+ERR_Price_valB = Ordine {0} Impossibile selezionare una data precedente alla data di oggi
+MSG_Confirm_Position_Text=Sei sicuro di voler confermare le posizioni selezionate?
+OK_Position_confirm=Nessun errore riscontrato per la posizione.
 Title_CatConf = Selezionare la Categoria Conferma
 WRR_No_CatConf = Nessuna schedulazione inserita
-Legend=Legend
-MSG_Confirm_Position_Text=Are you sure you want to confirm selected positions?
+Legend=Legenda
 #XTXT: 
-confirmationType=Confirmation type
+confirmationType=Tipo Conferma
  
 #XBUT: 
-close=Close
+close=Chiudi
  
 #XCOL: 
-date=Date
+date=Data
  
 #XCOL: 
-quantity=quantity
+quantity=Quantit\u00E0
  
 #XBUT: 
-confirmAndClose=Confirm and close
+confirmAndClose=Conferma e Chiudi
  
 #XTXT: 
-orderConfirmation=AB - Order receiver confirmation
+orderConfirmation=AB - Conferma del destinatario ordine
  
 #XTXT: 
-TOT=Total
+TOT=Totale
  
 #XTXT: 
-EBELP=Position
+EBELP=Posizione
  
 #XTXT: 
 SYSID=System ID
 
 #XTXT: 
-noData=No data found
+noData=Nessun dato trovato
  
 #XFLD: 
-iva=p. iva
+iva=P.Iva
  
 #XTXT: 
-titleSuppliers=Suppliers Search
+titleSuppliers=Ricerca Fornitori associati
  
 #YTXT: 
-positionConfirmation=Position confirmation
+positionConfirmation=Conferma Posizione
  
 #XFLD: 
-referenceDocumentNumber=Confirmation number
+referenceDocumentNumber=Numero conferma
  
 #XTXT: 
 METASUP=Metasupplier
  
 #XFLD: 
-Status=Status
+Status=Stati
  
 #XTXT: 
-titleMatnr=Search materials
+titleMatnr=Ricerca Materiale
  
 #XTIT: 
-KDATB=Start date
+KDATB=Data Inizio
  
 #XTIT: 
-KDATE=End date
+KDATE=Data Fine
 
 #XTIT:
-PRIMO_PERIODO=First Period
+PRIMO_PERIODO=Primo Periodo
 
 #XTIT:
-SECONDO_PERIODO=Total Period
+SECONDO_PERIODO=Totale Periodo
 
 #XTIT:
-PROG_RICHIESTO=Progressive Required
+PROG_RICHIESTO=Progressivo Richiesto
 
 #XTIT:
-PROG_CONFERMA=Progressive Confirm
+PROG_CONFERMA=Progressivo Conferma
 
 #XTIT:
-QTA_CONFERMA=Quantity Confirm
+QTA_CONFERMA=Quantit\u00E0 Confermata
 
 #XTIT:
-ZENTRATA=Progressive Received
+ZENTRATA=Progressivo Ricevuto
 
 #XTIT:
-KTMNG=Total Quantity Order
+KTMNG=Quantit\u00E0 tot. ordine
 
 #XTXT: 
-CAT_CONS=Delivery category
- 
-#XFLD: 
-PrintPDF=Print PDF Order
- 
-#XFLD: 
-ERR_Schedulations_empty=Please insert schedulations for position {0}
-ERR_Schedulations_empty_single = Please insert schedulations
-#XFLD: 
-ERR_Export=No orders found to export
- 
-#XFLD: 
-Export_Excel=Export table data in Excel file
- 
-#XTXT: 
-checPosition=Check position
- 
-#XFLD: 
-ERR_insert_schedulations=Please insert schedulations
+CAT_CONS=Categoria consegna
 
-titleModMetaSup= Update metasupplier data
+#XFLD: 
+ERR_Schedulations_empty=Attenzione: inserire almeno una schedulazione per la posizione {0}
+ERR_Schedulations_empty_single=Attenzione: inserire almeno una schedulazione
+ERR_empty=Attenzione: Ordine {0} Non sono state fatte modifiche
+#XFLD: 
+ERR_Export=Nessun dato da esportare
 
-ERR_no_schedulations=No schedulations found
-MSG_Confirm_Text=Are you sure you want to confirm?
+#XFLD: 
+Export_Excel=Esporta i dati in formato excel
 
-MENGE_RELEASE=Quantity release
-FROZEN=Frozen
+ERR_insert_schedulations=Prego inserire almeno una schedulazione
 
-HeaderTexts = Texts
+titleModMetaSup= Modifica anagrafica metafornitore
+ERR_no_schedulations=Non sono state inserite schedulazioni
+MSG_Confirm_Text=Sei sicuro di voler confermare le modifiche ?
 
-noTextsFound = No Texts Found
-TESTO=Text
+MENGE_RELEASE=Quantit\u00E0 rilasciata
+FROZEN=Frizzato
+
+HeaderTexts = Testi
+noTextsFound = Nessun testo trovato per ordine selezionato
+TESTO=Testo
 ID=ID
-DESCRIPTION=Description
-COMMENT=Comment
-Header = Header
-Positions = Positions
-PLANT_DESCR = Plant/Description
-SaveAndClose=Save and Close
+DESCRIPTION=Descrizione
+COMMENT=Commento
+Header = Testata
+Positions = Posizioni
+PLANT_DESCR = Plant/Descrizione
+SaveAndClose=Salva e chiudi
