--- a/AUPSUP_HTML5_METASUPPLIER_M/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_METASUPPLIER_M/webapp/i18n/i18n.properties
@@ -1,110 +1,97 @@
-title= Metasupplier management
-appTitle=Metasupplier management
-appTitle_M=Supplier Reference Contacts
-appTitle_BM=Supplier Reference Contacts
+title=Gestione metafornitore
+appTitle=Gestione metafornitore
+appTitle_M=Gestione contatti metafornitore
+appTitle_BM=Gestione contatti metafornitore
 appDescription=
-codiceMetafornitore=Metasupplier code
-ragSocialeMetafornitore=Metasupplier business name
-statoMetafornitore=Metasupplier state
-pivaMetafornitore=Metasuppliers VAT code
-paeseMetafornitore=Metasupplier country
-createSupplier=Create metasupplier
-indirizzo=Address
-nCivico=Street number
-lingua=Language
-modifica=Edit
-elimina=Delete
-contatti=Contacts
-registrazione=Registration
-approvato=Approved
-obsoleto=Obsolete
-createMetasupplier=Create metasuppliers
-titleSuppliers=Suppliers
-ragioneSocialeFornitore=Supplier business name
-pivaFornitore=Supplier VAT code
-organizzazioneAcquisti=Purchasing org.
-chiaveRicerca=Search key
-paeseFornitore=Supplier country
-ChooseDefaultSupplier=Default supplier
-Confirm=Confirm
-Cancel=Close
-selectAtLeastOneRow=Select at least one supplier
-titleCreateMetasupplier=Create metasupplier
-Metasuppliers=Metasupplier
-metasupplierCreated=Metasupplier created
-metasupplierModify=Metasupplier modify
-errorCreatingMetasupplier=Error creating metasupplier
-active=Active
-contacts=Contacts
-createContact=Create contact
-deleteContact=Delete
-editContact=Edit
-noData=No contact present
-contactType=Contact type
-metasupplierContactCreated=Contact created
-errorCreatingMetasupplierContact=Error creating contact
-saveContact=Save
+codiceMetafornitore=Codice metafornitore
+ragSocialeMetafornitore=Ragione sociale metafornitore
+statoMetafornitore=Stato metafornitore
+pivaMetafornitore=P.IVA metafornitore
+paeseMetafornitore=Paese metafornitore
+createSupplier=Crea metafornitore
+indirizzo=Indirizzo
+nCivico=N. civico
+lingua=Lingua
+modifica=Modifica
+elimina=Elimina
+contatti=Contatti
+registrazione=Registrazione
+approvato=Approvato
+obsoleto=Obsoleto
+createMetasupplier=Crea Metafornitore
+titleSuppliers=Fornitori
+ragioneSocialeFornitore=Ragione sociale fornitore
+pivaFornitore=P.IVA fornitore
+organizzazioneAcquisti=Org. acquisti
+chiaveRicerca=Chiave di ricerca
+paeseFornitore=Paese fornitore
+ChooseDefaultSupplier=Scegli il fornitore default
+Confirm=Conferma
+Cancel=Chiudi
+selectAtLeastOneRow=Seleziona almeno un fornitore
+titleCreateMetasupplier=Crea Metafornitore
+Metasuppliers=Metafornitore
+metasupplierCreated=Metafornitore creato
+metasupplierModify=Metafornitore modificato
+errorCreatingMetasupplier=Errore durante la creazione del Metafornitore
+active=Attivo
+contacts=Contatti
+createContact=Crea contatto
+deleteContact=Elimina
+editContact=Modifica
+noData=Nessun contatto presente
+contactType=Tipo contatto
+metasupplierContactCreated=Contatto creato
+errorCreatingMetasupplierContact=Errore durante la creazione del contatto
+saveContact=Salva
 resetContact=Reset
-metasupplierContactUpdated=Contact updated
-errorUpdateingMetasupplierContact=Error updating contact
-confirmDeletion=Do you confirm the deletion of this contact?
-metasupplierContactDeleted=Contact deleted
-errorDeletingMetasupplierContact=Error deleting contact
-selectContactType=Select contact type
-titleForm=Title
-name=name
-Name=Name
-surname=surname
-Surname=Surname
-Supplier=Supplier Code
-noMetasupplierFoundForUser=No metasupplier found for the current user
+metasupplierContactUpdated=Contatto aggiornato
+errorUpdateingMetasupplierContact=Errore durante l'aggiornamento del contatto
+confirmDeletion=Confermi di voler eliminare il contatto?
+metasupplierContactDeleted=Contatto eliminato
+errorDeletingMetasupplierContact=Errore durante l'eliminazione del contatto
+selectContactType=Seleziona la tipologia del contatto
+titleForm=Titolo
+name=Nome
+Name=Nome
+surname=Cognome
+Surname=Cognome
+Supplier=Codice Fornitore
+noMetasupplierFoundForUser=Nessun metasupplier trovato per l'utente corrente
 BU=Businnes Unit
-DeleteMetasupplierRow=Are you sure to deleted Selected Supplier?
+DeleteMetasupplierRow=Sei sicuro di voler cancellare il Fornitore selezionato?
 BC=Metasupplier Management
 M=Supplier Reference Contacts
 BM=Supplier Reference Contacts
-LIFNR=Supplier Code
+LIFNR=Codice Fornitore
 #XTXT: 
-EKORG=Purchase Organization
- 
-#XFLD: 
-uploadDoc=Upload document
+EKORG=Organizzazione Acquisti
+uploadDoc=Carica documento
 
 ERR_Type_missmatch = Errore nel caricamento del file solo formati di tipo xlxs,docx,pdf,txt sono permessi
 ERR_file_size = Attenzione il file caricato eccede i 5 Mb di dimensione
 OK_Upload=File caricato correttamente
 ERR_file_not_found=File non trovato
- 
 #XFLD: 
 fileName=Nome file
- 
-#XFLD: 
 attachments=Allegati
-attachmentsName=Nome file
 
  
 #XFLD: 
-street=via
+street=Via
  
 #XFLD: 
-cap=cap
+cap=Cap
  
 #XFLD: 
-provincia=provincia
- 
-#XFLD: 
-datiAnagraficiFornitore=Dati anagrafici del meta fornitore
+provincia=Provincia
+purchaseOrganization= Organizzazione commerciale
+datiAnagraficiFornitore=Dati anagrafici del metafornitore
 titleModMetaSup = Modifica meta fornitore
- 
-#XFLD: 
-RicercaFornitore=Ricerca fornitore
- 
-#XFLD: 
-search=Ricerca
-reset=Reset
+
 supplierName = Nome fornitore
 iva = P.iva
-
-MSG_Confirm_Modify_Metasupplier = Confirm metasupplier data modification?
-ERR_No_Supplier_Selected = No supplier selected
-noUploadPossible= No supplier found for this metasupplier impossible upload document.
+reset=Reset
+MSG_Confirm_Modify_Metasupplier = Sei sicuro di voler confermare le modifiche?
+ERR_No_Supplier_Selected = Nessun fornitore associato al metasupplier.
+noUploadPossible= Attenzione nessun fornitore associato al metasupplier, impossibile caricare documenti.
