--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -365,7 +365,7 @@ KDATB=Start date
 KDATE=End date
 
 #XTIT:
-PRIMO_PERIODO=First Period
+PRIMO_PERIODO=% Confirmed
 
 #XTIT:
 SECONDO_PERIODO=Total Period
@@ -425,3 +425,6 @@ Header = Header
 Positions = Positions
 PLANT_DESCR = Plant/Description
 SaveAndClose=Save and Close
+
+ERR_file_not_found= No document found for selected order
+FROZEN=Forzen Period
