--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
@@ -365,7 +365,7 @@ KDATB=Data Inizio
 KDATE=Data Fine
 
 #XTIT:
-PRIMO_PERIODO=Primo Periodo
+PRIMO_PERIODO=% Confermato
 
 #XTIT:
 SECONDO_PERIODO=Totale Periodo
@@ -417,3 +417,6 @@ Header = Testata
 Positions = Posizioni
 PLANT_DESCR = Plant/Descrizione
 SaveAndClose=Salva e chiudi
+
+ERR_file_not_found= Nessun documento trovato per l\u00B4ordine selezionato
+FROZEN=Periodo freezato
