METASUPPLIER BM Traduzione App Title

--- a/AUPSUP_HTML5_METASUPPLIER_BM/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_METASUPPLIER_BM/webapp/i18n/i18n_it.properties
@@ -60,9 +60,9 @@ Supplier=Codice Fornitore
 noMetasupplierFoundForUser=Nessun metasupplier trovato per l'utente corrente
 BU=Businnes Unit
 DeleteMetasupplierRow=Sei sicuro di voler cancellare il Fornitore selezionato?
-BC=Metasupplier Management
-M=Supplier Reference Contacts
-BM=Supplier Reference Contacts
+BC=Gestione Metafornitore
+M=Gestione contatti metafornitore
+BM=Gestione contatti metafornitore
 LIFNR=Codice Fornitore
 #XTXT: 
 EKORG=Organizzazione Acquisti
