--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
@@ -419,4 +419,4 @@ PLANT_DESCR = Plant/Descrizione
 SaveAndClose=Salva e chiudi
 
 ERR_file_not_found= Nessun documento trovato per l\u00B4ordine selezionato
-FROZEN=Periodo freezato
+FROZEN=Periodo congelato
