DEVELOP App size length

--- a/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_en.properties
@@ -1,6 +1,6 @@
 title=Handling Unit
 appTitle=Search Handling Unit
-appDescription=
+appDescription=Search Handling Unit
 
 VBELN=Sales document
 METASUP=Metasupplier
