--- a/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n.properties
@@ -1,6 +1,6 @@
 title=Handling Unit
 appTitle=Ricerca Handling Unit
-appDescription=
+appDescription=Ricerca Handling Unit
 
 VBELN=Documento di vendita
 METASUP=Metafornitore
