APP Correttive colonna

--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n.properties
@@ -117,8 +117,7 @@ Tipo=Tipo
 PianoConsegna= Piano di consegna
 Ordine = Ordine
 Previsionale = Previsionale
-
-ZQUANTITA = Quantit\u00E0 residua
+ZQUANTITA = Qt\u00E0 Rimanente Contratto
 
 titleMatnr = Ricerca Materiali
 
@@ -127,3 +126,5 @@ materialDescr = Descrizione Materiale
 materialCode = Codice Materiale
 
 close = Annulla
+
+KTMNG=Qt\u00E0 contratto
