--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_en.properties
@@ -116,10 +116,12 @@ Tipo=Type
 PianoConsegna= Piano di consegna
 Ordine = Order
 Previsionale = Previsionale
-ZQUANTITA = Quantity
+ZQUANTITA = Remains Contract Qty
 
 titleMatnr = Search Materials
 materialDescr = Material Description
 materialCode = Material Code
 
 close = Close
+
+KTMNG=Contract qty
