--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_it.properties
@@ -118,7 +118,7 @@ PianoConsegna= Piano di consegna
 Ordine = Ordine
 Previsionale = Previsionale
 
-ZQUANTITA = Quantit\u00E0 residua
+ZQUANTITA = Qt\u00E0 Rimanente Contratto
 
 titleMatnr = Ricerca Materiali
 
@@ -127,3 +127,4 @@ materialDescr = Descrizione Materiale
 materialCode = Codice Materiale
 
 close = Annulla
+KTMNG=Qt\u00E0 contratto
