METASUPPLIER: visibilità metasupplier disabilitati

--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n.properties
@@ -95,3 +95,6 @@ reset=Reset
 MSG_Confirm_Modify_Metasupplier = Sei sicuro di voler confermare le modifiche?
 ERR_No_Supplier_Selected = Nessun fornitore associato al metasupplier.
 noUploadPossible= Attenzione nessun fornitore associato al metasupplier, impossibile caricare documenti.
+StatoMetafornitore=Stato
+Disattivato=Disattivato
+Attivato=Attivato
