--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_en.properties
@@ -95,3 +95,6 @@ reset=Reset
 MSG_Confirm_Modify_Metasupplier = Confirm metasupplier data modification?
 ERR_No_Supplier_Selected = No supplier selected
 noUploadPossible= No supplier found for this metasupplier impossible upload document.
+StatoMetafornitore=Status
+Disattivato=Disabled
+Attivato=Active
