--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -232,7 +232,7 @@ WERKS=Plant
 IDNLF=Supp.Mat.No.
  
 #XTXT: 
-ETENR=Num Int Conf
+ETENR=Schedulation numb.
  
 #XTXT: 
 EINDT=Delivery Date
@@ -429,3 +429,4 @@ SaveAndClose=Save and Close
 ERR_file_not_found= No document found for selected order
 
 FROZEN=Frozen period
+NUMINTCONF=Int. conf. numb.
