--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -232,7 +232,7 @@ WERKS=Plant
 IDNLF=Supp.Mat.No.
  
 #XTXT: 
-ETENR=Num Int Conf
+ETENR=Num Schedulation
  
 #XTXT: 
 EINDT=Delivery Date
@@ -428,3 +428,5 @@ SaveAndClose=Save and Close
 
 ERR_file_not_found= No document found for selected order
 FROZEN=Forzen Period
+
+NUMINTCONF=Int conf. numb.
