--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it_IT.properties
@@ -232,7 +232,7 @@ WERKS=Divisione
 IDNLF=Codice mat. fornitore
  
 #XTXT: 
-ETENR=Num Int Conf
+ETENR=Num. schedulazione
  
 #XTXT: 
 EINDT=Data consegna
@@ -420,3 +420,5 @@ SaveAndClose=Salva e chiudi
 
 ERR_file_not_found= Nessun documento trovato per il piano selezionato
 FROZEN=Periodo congelato
+
+NUMINTCONF=Num int conf
