--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
@@ -232,7 +232,7 @@ WERKS=Divisione
 IDNLF=Codice mat. fornitore
  
 #XTXT: 
-ETENR=Num Int Conf
+ETENR=Num. schedulazione
  
 #XTXT: 
 EINDT=Data consegna
@@ -421,3 +421,5 @@ SaveAndClose=Salva e chiudi
 ERR_file_not_found= Nessun documento trovato per l\u00B4ordine selezionato
 
 FROZEN=Periodo freezato
+
+NUMINTCONF=Num int conf
