--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
@@ -423,3 +423,11 @@ ERR_file_not_found= Nessun documento trovato per l\u00B4ordine selezionato
 FROZEN=Periodo freezato
 
 NUMINTCONF=Num int conf
+
+statusL=Basso 
+statusML=Medio Basso
+statusM=Medio 
+statusMH=Medio Alto
+statusH=Alto
+
+statusColorTitle=Stato critico ordini
