--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -430,3 +430,10 @@ ERR_file_not_found= No document found for selected order
 
 FROZEN=Frozen period
 NUMINTCONF=Int. conf. numb.
+
+statusL=Low Critical
+statusML=Medium Low Critical
+statusM=Medium Critical
+statusMH=Medium High Critical
+statusH=High Critical
+statusColorTitle=Critical order status
