--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
@@ -422,3 +422,10 @@ ERR_file_not_found= Nessun documento trovato per l\u00B4ordine selezionato
 FROZEN=Periodo congelato
 
 NUMINTCONF=Num int conf
+
+statusL=Basso 
+statusML=Medio Basso
+statusM=Medio 
+statusMH=Medio Alto
+statusH=Alto
+statusColorTitle=Stato critico ordini
