--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_it.properties
@@ -85,5 +85,5 @@ GG_ESTRAZIONE=Giorni Estrazione
 PROGRESSIVI=Progressivi
 ZAPPPERSUP=Percentuale Superiore
 ZAPPPERINF=Percfentuale Inferiore
-ZAPPGGSUP=Num. giorni Superiore
-ZAPPGGINF=Num. giorni Inferiore
+ZAPPGGSUP=Num. giorni Superiore (fino a compreso)
+ZAPPGGINF=Num. giorni Inferiore (fino a compreso)
