--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
@@ -423,3 +423,10 @@ ERR_file_not_found= Nessun documento trovato per il piano selezionato
 FROZEN=Periodo freezato
 
 NUMINTCONF=Num int conf
+
+statusL=Basso 
+statusML=Medio Basso
+statusM=Medio 
+statusMH=Medio Alto
+statusH=Alto
+statusColorTitle=Stato critico piani
