LOG_ORD: implementazione

--- a/AUPSUP_HTML5_LOGSORDSCHED/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_LOGSORDSCHED/webapp/i18n/i18n_it_IT.properties
@@ -451,7 +451,7 @@ DataInserimentoConferma=Data Inserimento Conferma
 PrezzoAttuale=Prezzo Attuale
 UdPAttuale=UdP attuale
 DataInizio=Data Inizio
-DataFine=Data Fine
+DataFine=Data Fine0
 ConfermePrezzoPos=Conferme prezzo
 Prezzo=Prezzo
 Quantita=Quantita
