--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -437,4 +437,4 @@ statusM=Medium Critical
 statusMH=Medium High Critical
 statusH=High Critical
 statusColorTitle=Critical order status
-RangeDateEketEkeh=Data schedulazione
+RangeDateEketEkeh=Schedulation date
