--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
@@ -433,3 +433,7 @@ statusH=Alto
 statusColorTitle=Stato critico ordini
 
 RangeDateEketEkeh=Data schedulazione
+
+
+ORIG_NETPR=Prezzo netto orig.
+ORIG_PEINH=Unit\u00E0 di prezzo orig.
