--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -438,3 +438,7 @@ statusMH=Medium High Critical
 statusH=High Critical
 statusColorTitle=Critical order status
 RangeDateEketEkeh=Schedulation date
+
+
+ORIG_NETPR=Orig. net price
+ORIG_PEINH=Orig. price unit
