--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
@@ -430,3 +430,7 @@ statusMH=Medio Alto
 statusH=Alto
 statusColorTitle=Stato critico ordini
 RangeDateEketEkeh=Data schedulazione
+
+
+ORIG_NETPR=Prezzo netto orig.
+ORIG_PEINH=Unit\u00E0 di prezzo orig.
